Update weather-app.yml with comments
Commented out the install dependencies step and added a placeholder comment.

--- a/.github/workflows/weather-app.yml
+++ b/.github/workflows/weather-app.yml
@@ -1,3 +1,4 @@
+
 name: Weather App Production Check
 
 on:
@@ -24,7 +25,7 @@ jobs:
 
       # - name: Install Dependencies
       #   run: npm install
-
+      # hello
       - name: Run Unit Tests
         run: node test.js
 
